--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=1010
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sportsdb
 spring.datasource.username=root
-spring.datasource.password=omrg
+spring.datasource.password=Patil@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
