--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ spring.thymeleaf.enabled=true
 server.servlet.session.timeout=90m
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=omgawali2024@gmail.com
+spring.mail.password=aejv mpym czpl pwaf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
