--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,13 @@ server.port=1010
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sportsdb
 spring.datasource.username=root
-spring.datasource.password=Patil@123
+spring.datasource.password=omrg
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
-spring.jpa.show-sql=true
+
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
